updated some typo

--- a/src/app/mycomponent/getstarted/getstarted.component.html
+++ b/src/app/mycomponent/getstarted/getstarted.component.html
@@ -2,8 +2,7 @@
     <img src="../assets/images/wall.jpg" class="img-fluid img-blur" alt="Responsive image">
     <div class="container getstart d-none d-md-flex">
         <h1>Bike Dikhaao</h1>
-        <p>The best place to discover information of all Bikes with full Specification and review.
-            We can make your decision easy and valueable.
+        <p>Welcome dear riders, we are here to help you to find out best suitable bike for your need and budget.
         </p>
         <a href="#tab-view" class="btn btn-primary">Get Started</a>
     </div>
