--- a/src/app/mycomponent/about/about.component.html
+++ b/src/app/mycomponent/about/about.component.html
@@ -1,9 +1,12 @@
 <div class="shadow m-5 p-5">
     <h1 class="my5text-center">Bike Dikhaao</h1>
-    <h3>About Us</h3>
-    <p class="text-justify">This Website is developed by P2A Corporation,
-        At this website you will find a lot of information regarding bikes.
-        Its very helpful website for people want to buy bikes as they will invest hard earned money,
-        We Bike Dikhaao would love to help them in this process
+    <h3>About me</h3>
+    <h6>Author: Praveen Prajapati | Full stack web developer    </h6>
+    <h6>Project type: Acadmic</h6>
+    <h6>Version : v0.0.2</h6>
+    <h6>Technology: Angular | Typescript | JSON | CSS</h6>
+    <p class="text-justify">This Website is a mini project of one of my acadamic subject which was HMI ( Human Machine Interaction ),
+        The idea is to help our audience to find best bike as per there need and budget
+        It could be very useful for people before going to the showroom.
     </p>
 </div>
