--- a/src/app/mycomponent/brands/brands.component.html
+++ b/src/app/mycomponent/brands/brands.component.html
@@ -1,12 +1,8 @@
-<div class="row py-5">
-
-
-    <div class="col-4 col-md-3" *ngFor="let item of brand">
-        <div class="m-3 m-md-5">
-            <a routerLink="/Brand/{{item.b_name}}">
-                <img class="card-img-top" src={{item.b_img}}
-                    data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-            </a>
-        </div>
+<div class="d-flex justify-content-center flex-wrap py-5">
+    <div style="width: 200px" class="p-2 d-flex align-items-center" *ngFor="let item of brand">
+        <a class="mw-100" routerLink="/Brand/{{item.name}}">
+            <img class="card-img-top mw-100" src={{item.img}}
+                data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+        </a>
     </div>
 </div>
