--- a/src/app/mycomponent/mnbody/mnbody.component.html
+++ b/src/app/mycomponent/mnbody/mnbody.component.html
@@ -1,6 +1,5 @@
 <app-getstarted></app-getstarted>
 <div class="mnbody container-fluid container-xl py-5" id="tab-view">
-
     <ul class="nav nav-pills justify-content-center py-3 mb-3" id="pills-tab" role="tablist">
         <li class="nav-item">
             <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
@@ -8,7 +7,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link active" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
-                aria-controls="pills-profile" aria-selected="true">popular</a>
+                aria-controls="pills-profile" aria-selected="true">Popular Bikes</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab"
