--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
 <app-header></app-header>
-
-<div class="router1">
-
-    <router-outlet></router-outlet>
-</div>
-<hr />
+<router-outlet></router-outlet>
+<app-footer></app-footer>
