--- a/src/app/mycomponent/footer/footer.component.html
+++ b/src/app/mycomponent/footer/footer.component.html
@@ -1,7 +1,22 @@
-<div class="footer container" style="z-index: -2;">
-    <form action="" class="subscribe">
-        <input type="text" placeholder="email">
-        <input type="text" placeholder="Name">
-        <input type="text" placeholder="comment">
-    </form>
+<div class="footer py-4 text-light container-fluid bg-secondary" style="z-index: -2;">
+    <div class="">
+        <div class="d-flex p-3 flex-column justify-content-center align-items-center">
+            <div class="font-weight-bold mb-2">Follow me</div>
+            <div class="d-flex justify-content-center">
+                <a *ngFor="let f of followMeInfo"  class="bg-white mx-2 shadow rounded p-2" href="{{f.redirect}}" target="_blank">
+                    <img
+                        style="height: 30px; width: 30px"
+                        src="{{f.logo}}"
+                        class="rounded"
+                    />
+                </a>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center w-100">
+            <div class="">Developed by 
+                <span class="font-weight-bold">Praveen Prajapati</span>
+            </div>
+        </div>
+
+    </div>
 </div>
