--- a/src/app/mycomponent/header/header.component.html
+++ b/src/app/mycomponent/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Bike Dikhao</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button #toggler class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,10 +16,16 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input id="searchval" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input #searchval class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"
+                (click)="openSearch(searchval, toggler)">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
-
+<div style="width: 100vw; height: 100vh; position: fixed; z-index: 50"
+    class="justify-content-center align-items-center slide-in-down" [class]="showModal">
+    <div #close style="height: 100vh; position:absolute; width: 100vw; z-index: -1; backgroundColor: rgba(0,0,0,0.3);"
+        (click)="closeSearch()"></div>
+    <app-search [handleChange]="handleChange" [searchedData]="searchedData" [closeSearch]="clicked"></app-search>
+</div>
 <div class="my-2 py-4"></div>
