--- a/src/app/mycomponent/search/search.component.html
+++ b/src/app/mycomponent/search/search.component.html
@@ -1,7 +1,12 @@
-<div style="width: 80vw; height: 80vh" class="justify-content-center align-items-center p-10 bg-light">
-    <div class="w-100 d-flex justify-content-center m-3">
-        <input autofocus placeholder="Search bikes" class="m-3 w-75 rounded p-3" #inp
-            (input)="handleChange(inp.value)" />
+<div style="width: 80vw; height: 80vh" class="justify-content-center rounded shadow align-items-center p-10 bg-light">
+    <div class="w-100 d-flex justify-content-center">
+        <input
+            #inp
+            autofocus
+            placeholder="Search bikes"
+            class="w-75 mt-2 border border-secondary rounded p-2"
+            (input)="handleChange(inp.value)"
+        />
     </div>
     <div style="maxHeight: 70%" class="w-100 bg-red overflow-auto px-4">
         <div class="w-100 my-2 border p-2 rounded-4 bg-white cursor-pointer" *ngFor="let d of searchedData">
