--- a/src/app/mycomponent/getstarted/getstarted.component.html
+++ b/src/app/mycomponent/getstarted/getstarted.component.html
@@ -1,9 +1,15 @@
 <div class="mainget">
-    <img src="../assets/images/wall.jpg" class="img-fluid img-blur" alt="Responsive image">
-    <div class="container getstart d-none d-md-flex">
-        <h1>Bike Dikhaao</h1>
-        <p>Welcome dear riders, we are here to help you to find out best suitable bike for your need and budget.
-        </p>
-        <a href="#tab-view" class="btn btn-primary">Get Started</a>
-    </div>
+  <img
+    src="../assets/images/wall.jpg"
+    class="img-fluid img-blur"
+    alt="Responsive image"
+  />
+  <div class="container getstart d-none d-md-flex">
+    <h1>Bike Dikhaao</h1>
+    <p>
+      Unlock the power of precision with detailed motorbike specs. Find your
+      ideal ride for thrilling journeys ahead.
+    </p>
+    <a href="#tab-view" class="btn btn-primary">Explore Now</a>
+  </div>
 </div>
